fix logo align left 2em and 5em for wide screen

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 #logo {
-    margin-left: 4em;
+    margin-left: 2em;
     width: 1.5em;
 }
 
@@ -258,4 +258,9 @@ footer img {
     body {
         font-size: 125%;
     }
+
+    #logo {
+        margin-left: 5em;
+    }
+    
 }
